--- a/openocd.cfg
+++ b/openocd.cfg
@@ -3,5 +3,5 @@ interface cmsis-dap
 cmsis_dap_vid_pid 0x03eb 0x2141
 
 # Chip info 
-set CHIPNAME at91samd51g18
-source [find target/at91samdXX.cfg]
+set CHIPNAME samd51g18a
+source [find target/atsame5x.cfg]
